style.css
/* ... */
.element-filtre {
	display: inline-block;
	font-weight: bold;
	border: 0px solid cornsilk;
	border-radius: 0px;
}

:root {
	--blue: #0065fc;
	--blue: #dee8ff;
	--grey: #F2F2F2;
}

#main-top {
	margin-top: 55px;
}

.logo {
	margin-top: 40px;
	background: #f2f2f2;
	opacity: 1;
	width: 74%;
}

.logo img {
	padding-left: 150px;
}

nav {
	height: 74px;
	display: flex;
	justify-content: space-between;
}

.nav-element:hover {
	border-top: #0065fc 3px solid;
}

#container-nav {
	display: flex;
	width: 30%;
}

.nav-element {
	display: flex;
	width: 50%;
	align-items: end;
	justify-content: center;
	padding: 70px 25px 25px 25px;
}

#container-nav a {
	font-size: 16px;
}

/*top header lien à droite*/
.link-1 {
	margin-top: 46px;
}

.link-1:hover {
	color: #0065fc;
	transform: scale(1.02);
	cursor: pointer;
}

.link-2 {
	margin-top: 46px;
}

.link-2:hover {
	transform: scale(1.02);
	box-shadow: 0 0 8px var(--blue);
	cursor: pointer;
}

h1 {
	font-size: 19px;
}

#main-top h2 {
	margin-bottom: 0
}

#main-top p {
	margin-top: 10px;
}

p {
	font-size: 16px;
}

/*touche pour ecrire la ville de recherche*/
#research-input {
	border: none;
	width: 200px;
	font-size: 20px;
	font-weight: bold;
	color: black;
	border: 2px solid #F2F2F2;
	padding: 10px;
}

#research {
	display: flex;
	height: 50px;
	margin-top: 15px;
}

/*touche rechercher dans le header*/
#button-research {
	background-color: #0065fc;
	color: #dee8ff;
	font-size: 20px;
	font-weight: bold;
	border-top-right-radius: 16px;
	border-bottom-right-radius: 16px;
	border: none;
	padding: 10px;
}



#button-research:hover {
	transform: scale(1.02);
	box-shadow: 0 0 8px var(--blue);
	cursor: pointer;
}

/*touche de localisation dans le header*/
#icon6 {
	color: #0065fc;
	width: 50px;
	display: inline;
	align-items: center;
	justify-content: center;
	border-radius: 16px 0 0 16px;
	background-color: #faf3f3;
}

/*logo icones des filtres de recherche header et icône de localisation*/
.list-element1,
.list-element2 {
	font-size: 17px;
	padding: 0 5px;
}

.container-filtre{
	color: aqua;

}

.list-element1,
.list-element2 span,
.list-element1,
.list-element2 a {
	display: inline-block;
}

.list-element1,
.list-element2 span {
	padding: 0 0px 0px 14px;
	color: #0065fc;
}

/*icone info dans le header*/
.element5 {
	color: #0065fc;
	border-radius: 100px;
	border: solid 1px lightgray;
	margin-right: 8px;
	padding: 7px 11px 7px 15px;
	font-size: 18px;
}

.info p {
	display: initial;
}

.search-filters div:hover {
	background-color: #0065fc;
	cursor: pointer;
	display: flex;
}

.fa-search {
	visibility: hidden;
	color: #0065fc;
}

.fa-map-marker-alt {
	color: black;
	margin-left: 22px;
	margin-top: 15px;
}

/*titre hebergements à Marseille*/
.h3 {
	font-size: 22px;
}

.fa-chart-line {
	color: #0065fc;
}

.all-articles {
	display: flex;
	gap: 20px;
}

.all-articles>div {
	border-radius: 16px;
	background-color: #F2F2F2;
}

.all-articles h3 {
	padding-left: 20px;
	font-size: 22px;
}

.all-articles .hebergements {
	flex-basis: 66%;
}

.all-articles .populaires {
	flex-basis: 33%;
}

.star-blue {
	color: #0065fc;
}

.star-grey {
	color: grey;
	opacity: 0.7;
}

/*hebergements*/
.hebergements {
	display: flex;
	flex-wrap: wrap;
	align-items: flex-start;
	gap: 0;
	padding: 0 10px 0 10px;
}

.hebergements h3 {
	width: 100%;
}

.hebergements a {
	text-decoration: none;
	color: inherit;
}

.card-hebergement {
	display: flex;
	flex-wrap: wrap;
	gap: 10px;
	justify-content: space-around;
}

.card-hebergement div {
	flex-basis: calc(33% - 40px);
	min-width: 220px;
}

.card {
	background-color: white;
	border-radius: 16px 16px 16px 16px;
	padding: 5px;
	box-shadow: 0 0 8px gray;
	flex-grow: 1;
	margin: 0 10px 10px 10px;
	transition: all 0.2s;
}

.card img {
	border-radius: 16px 16px 0 0;
	height: 120px;
	width: 100%;
	object-fit: cover;
}

.card p,
.card h4 {
	margin: 5px
}

h4 {
	font-size: 16px;
}

.card:hover {
	transform: scale(1.02);
	box-shadow: 0 0 8px blue;
	cursor: pointer;
}

.card.stars {
	margin-top: auto;
	color: #0065fc;
}
#acacher{
	font-size: 18px;
}

/*populaires*/
.populaires {
	display: flex;
	flex-direction: column;
	background-color: #F2F2F2;
}

.populaires h3 {
	display: flex;
	justify-content: space-between;
	padding-right: 20px;
}

.popular-list {
	display: flex;
	flex-direction: column;
}

.card-popular {
	display: flex;
	background-color: white;
	padding: 5px;
	border-radius: 15px;
	min-height: 140px;
	margin: 0 20px 20px 20px;
	min-width: 200px;
	box-shadow: 0 0 8px var(--dark-grey);
	transition: all 0.2s;
}

.card-popular:hover {
	transform: scale(1.02);
	box-shadow: 0 0 8px var(--blue);
	cursor: pointer;
}

.card-popular img {
	object-fit: cover;
	border-radius: 16px 0 0 16px;
	height: 140px;
	min-width: 35%;
	width: 35%;
}

.card-description {
	background-color: white;
	flex-basis: 100%;
	display: flex;
	flex-direction: column;
	margin-left: 10px;
}

.card-description p,
.card-description h4 {
	margin: 3px;
}

.card-description .stars-margin-top {
	margin-top: auto;
}

.h4 {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 700;
	font-size: 22px;
	line-height: 26px;
	color: #000000;
}

/*activites*/
#act{
	font-size: 22px;
}
.container-act {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
}

.activites-list {
	display: flex;
	background-color: white;
	justify-content: space-between;
	align-items: center;
	width: 100%;
}

.card-activites {
	margin-top: auto;
	width: 22%;
	border-radius: 10%;
	box-shadow: 4px 4px 4px white;
	transition: all 0.2s;
	border: 4px solid var(--grey);
}

.card-activites-img,
.card-activite-title {
	display: flex;
	width: 100%;
	border-radius: 10%;
}



.card-activites-title {
	padding: 0 20px;
	font-size: 14px;
}

.card-activites img {
	width: 100%;
	object-fit: cover;
	height: 445px;
	border-top-right-radius: 10%;
	border-top-left-radius: 10%;
}

.card-activites:hover {
	transform: scale(1.02);
	box-shadow: 0px 0px 40px rgb(83, 80, 255);
	cursor: pointer;
}
/* ... */

